--- a/Final Project TV Show Review/index.html
+++ b/Final Project TV Show Review/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css">
+        <script src="firebase.mjs" type="module"></script>
         <title>Mecha Media</title>
     </head>
     <body>
