--- a/Final Project TV Show Review/index.html
+++ b/Final Project TV Show Review/index.html
@@ -31,7 +31,16 @@
             <div id="tvshows">
                 <h2 id="title">Popular Shows</h2>
                 <div id="imgShows"></div>
-            </div>     
+            </div>
+            <div id="comments">
+                <div id="addCommentDiv">
+                    <h2>Comments</h2>
+                    <textarea name="" id="newComment" cols="30" rows="3" placeholder="Create comment"></textarea>
+                    <button id="addCommentBtn">Add Comment</button>
+                </div>
+                    <div class="error"></div>
+                </div>
+            </div>    
         </div>
     </body>
 </html>
