--- a/Final Project TV Show Review/index.html
+++ b/Final Project TV Show Review/index.html
@@ -4,6 +4,7 @@
         <script src="index.js"></script>
         <link rel="stylesheet" href="style.css">
         <script src="firebase.mjs" type="module"></script>
+        <script src="https://kit.fontawesome.com/a441464eea.js" crossorigin="anonymous"></script>
         <title>Mecha Media</title>
     </head>
     <body>
